--- a/red-bicicletas/package.json
+++ b/red-bicicletas/package.json
@@ -8,13 +8,24 @@
     "test": "jasmine"
   },
   "dependencies": {
+    "axios": "^0.20.0",
+    "bcrypt": "^5.0.0",
+    "connect-mongodb-session": "^2.4.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
+    "google-auth-library": "^6.0.6",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.28.0",
     "mongoose": "^5.10.6",
+    "mongoose-unique-validator": "^2.0.3",
     "morgan": "~1.9.1",
+    "newrelic": "^6.13.0",
+    "nodemailer": "^6.4.11",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "pug": "2.0.0-beta11",
     "request": "^2.88.2"
   },
