--- a/red-bicicletas/package.json
+++ b/red-bicicletas/package.json
@@ -26,8 +26,14 @@
     "newrelic": "^6.13.0",
     "nodemailer": "^6.4.11",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-facebook-token": "^4.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "underscore": "^1.11.0"
   },
   "devDependencies": {
     "jasmine": "^3.6.1",
