--- a/red-bicicletas/.env
+++ b/red-bicicletas/.env
@@ -1,8 +1,8 @@
 NODE_ENV='development'
 MONGO_URI='mongodb://localhost/red_bicicletas'
 SENDGRID_API_SECRET=
-ETHEREAL_EMAIL_USER_DEV=
-ETHEREAL_EMAIL_PASS_DEV=
+ETHEREAL_EMAIL_USER_DEV="stephon.nienow@ethereal.email"
+ETHEREAL_EMAIL_PASS_DEV="Kavdc2Awu7g2T726ZU"
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 FACEBOOK_APP_ID=
