Mongo URI y Sendrig

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NODE_ENV='development'
-MONGO_URI='mongodb://localhost/red_bicicletas'
-SENDGRID_API_SECRET=
+MONGO_URI='mongodb+srv://admin:admin@red-bicicletas.nqfb9.mongodb.net/<dbname>?retryWrites=true&w=majority'
+SENDGRID_API_SECRET="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"
 ETHEREAL_EMAIL_USER_DEV="stephon.nienow@ethereal.email"
 ETHEREAL_EMAIL_PASS_DEV="Kavdc2Awu7g2T726ZU"
 GOOGLE_CLIENT_ID=
