--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ MONGO_URI='mongodb+srv://admin:admin@red-bicicletas.nqfb9.mongodb.net/<dbname>?r
 SENDGRID_API_SECRET="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"
 ETHEREAL_EMAIL_USER_DEV="stephon.nienow@ethereal.email"
 ETHEREAL_EMAIL_PASS_DEV="Kavdc2Awu7g2T726ZU"
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID="982964872992-5pvp50d3qmk3nkn0k10gf3dlcggfpi3i.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="cw3QgQ53IjlueHV88LcZ3XlO"
 FACEBOOK_APP_ID=
 FACEBOOK_APP_SECRET=
 HOST="http://localhost:3000"
