--- a/.env
+++ b/.env
@@ -5,6 +5,6 @@ ETHEREAL_EMAIL_USER_DEV="stephon.nienow@ethereal.email"
 ETHEREAL_EMAIL_PASS_DEV="Kavdc2Awu7g2T726ZU"
 GOOGLE_CLIENT_ID="982964872992-5pvp50d3qmk3nkn0k10gf3dlcggfpi3i.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="cw3QgQ53IjlueHV88LcZ3XlO"
-FACEBOOK_APP_ID=
-FACEBOOK_APP_SECRET=
+FACEBOOK_APP_ID="657101155235435"
+FACEBOOK_APP_SECRET="84aa6c4ec13ec6359f7cc2781e59b4b4"
 HOST="http://localhost:3000"
