--- a/.env
+++ b/.env
@@ -1,10 +1,19 @@
 NODE_ENV='development'
+# NODE_ENV='production'
+
+PORT=3000;
+# MongoDB
 MONGO_URI='mongodb+srv://admin:admin@red-bicicletas.nqfb9.mongodb.net/<dbname>?retryWrites=true&w=majority'
-SENDGRID_API_SECRET="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"
-ETHEREAL_EMAIL_USER_DEV="stephon.nienow@ethereal.email"
-ETHEREAL_EMAIL_PASS_DEV="Kavdc2Awu7g2T726ZU"
-GOOGLE_CLIENT_ID="982964872992-5pvp50d3qmk3nkn0k10gf3dlcggfpi3i.apps.googleusercontent.com"
-GOOGLE_CLIENT_SECRET="cw3QgQ53IjlueHV88LcZ3XlO"
-FACEBOOK_APP_ID="657101155235435"
-FACEBOOK_APP_SECRET="84aa6c4ec13ec6359f7cc2781e59b4b4"
-HOST="http://localhost:3000"
+
+
+SENDGRID_API_KEY='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'
+# Mailer
+ETHEREAL_USER='stephon.nienow@ethereal.email'
+ETHEREAL_PWD='Kavdc2Awu7g2T726ZU'
+SENDING_EMAIL_ADDRESS='stephon.nienow@ethereal.email'
+APP_BASE_URL='http://localhost:3000'
+
+GOOGLE_CLIENT_ID='982964872992-5pvp50d3qmk3nkn0k10gf3dlcggfpi3i.apps.googleusercontent.com'
+GOOGLE_CLIENT_SECRET='cw3QgQ53IjlueHV88LcZ3XlO'
+FACEBOOK_ID='657101155235435'
+FACEBOOK_SECRET='84aa6c4ec13ec6359f7cc2781e59b4b4'
