--- a/package.json
+++ b/package.json
@@ -8,35 +8,32 @@
     "test": "jasmine"
   },
   "dependencies": {
-    "axios": "^0.20.0",
     "bcrypt": "^5.0.0",
     "connect-mongodb-session": "^2.4.1",
     "cookie-parser": "~1.4.4",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "express-session": "^1.17.1",
-    "google-auth-library": "^6.0.6",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
-    "moment": "^2.28.0",
-    "mongoose": "^5.10.6",
+    "moment": "^2.27.0",
+    "mongoose": "^5.10.3",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "~1.9.1",
-    "newrelic": "^6.13.0",
+    "newrelic": "^6.13.1",
     "nodemailer": "^6.4.11",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "passport": "^0.4.1",
-    "passport-facebook": "^3.0.0",
     "passport-facebook-token": "^4.0.0",
+    "passport-google-oauth2": "^0.2.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-    "pug": "2.0.0-beta11",
-    "request": "^2.88.2",
-    "underscore": "^1.11.0"
+    "pug": "^3.0.0",
+    "request": "^2.88.2"
   },
   "devDependencies": {
-    "jasmine": "^3.6.1",
     "nodemon": "^2.0.4"
   }
 }
