--- a/.env
+++ b/.env
@@ -11,7 +11,7 @@ SENDGRID_API_KEY='SG.b5vW9vvqQiyIAvB4r99gvg.jHmZcsGjuhbJlrRbSohOgB2r_YmGc0zHxzvJ
 ETHEREAL_USER='stephon.nienow@ethereal.email'
 ETHEREAL_PWD='Kavdc2Awu7g2T726ZU'
 SENDING_EMAIL_ADDRESS='stephon.nienow@ethereal.email'
-APP_BASE_URL='https://red-bicicletas-buenos-aires.herokuapp.com'
+APP_BASE_URL='https://red-bicicletas-buenos-aires.herokuapp.com/'
 
 GOOGLE_CLIENT_ID='982964872992-5pvp50d3qmk3nkn0k10gf3dlcggfpi3i.apps.googleusercontent.com'
 GOOGLE_CLIENT_SECRET='cw3QgQ53IjlueHV88LcZ3XlO'
