corrijo base url

--- a/.env
+++ b/.env
@@ -11,9 +11,11 @@ SENDGRID_API_KEY='SG.b5vW9vvqQiyIAvB4r99gvg.jHmZcsGjuhbJlrRbSohOgB2r_YmGc0zHxzvJ
 ETHEREAL_USER='stephon.nienow@ethereal.email'
 ETHEREAL_PWD='Kavdc2Awu7g2T726ZU'
 SENDING_EMAIL_ADDRESS='stephon.nienow@ethereal.email'
-APP_BASE_URL='https://red-bicicletas-buenos-aires.herokuapp.com/'
+APP_BASE_URL='https://red-bicicletas-buenos-aires.herokuapp.com'
 
-GOOGLE_CLIENT_ID='982964872992-5pvp50d3qmk3nkn0k10gf3dlcggfpi3i.apps.googleusercontent.com'
-GOOGLE_CLIENT_SECRET='cw3QgQ53IjlueHV88LcZ3XlO'
+GOOGLE_CLIENT_ID='982964872992-esbd12j4crslqb07e40g0hoe344uof69.apps.googleusercontent.com'
+#OFFLINE GOOGLE_CLIENT_ID='982964872992-5pvp50d3qmk3nkn0k10gf3dlcggfpi3i.apps.googleusercontent.com'
+GOOGLE_CLIENT_SECRET='VGw_fJ5BC79iQiGuzG7os1kn'
+#OFFLINE GOOGLE_CLIENT_SECRET='cw3QgQ53IjlueHV88LcZ3XlO'
 FACEBOOK_ID='657101155235435'
 FACEBOOK_SECRET='84aa6c4ec13ec6359f7cc2781e59b4b4'
